# megaswap-faucet

./: .gitignore  Cargo.toml  README.md
src/: config.rs  lib.rs
src/instructions/: account_checkers.rs  dispense.rs  initialize.rs  load.rs  mod.rs
