[package]
name = "megaswap-vault"
version = "0.1.0"
edition = "2024"

[dependencies]
pinocchio = "0.11.2"
pinocchio-associated-token-account = "0.4.0"
pinocchio-log = "0.5.1"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.6.1"
pinocchio-token = "0.6.0"
pinocchio-token-2022 = "0.3.1"
solana-account-view = "2.0.0"
solana-address = "2.6.1"

[lib]
crate-type = ["lib", "cdylib"]
